Fixed horizontal scroll in IE and Edge

--- a/source/less/blocks/cute-things.less
+++ b/source/less/blocks/cute-things.less
@@ -109,7 +109,7 @@
       z-index: 2;
       content: "";
       height: 30px;
-      width: 751px;
+      width: 669px;
       top: 732px;
       left: 50%;
       transform: translateX(-50%);
@@ -139,7 +139,7 @@
 
   .cute-things__list {
     display: flex;
-    margin-left: 41px;
+    margin-left: 42px;
     flex-wrap: wrap;
     align-items: flex-end;
   }
@@ -181,7 +181,7 @@
       z-index: 2;
       content: "";
       height: 40px;
-      width: 1050px;
+      width: 1051px;
       top: 726px;
       left: 50%;
       transform: translateX(-50%);
