--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -64,14 +64,14 @@
 @media (min-width: 1150px) {
   .page-main__title-wrapper {
     &::before {
-      width: 1050px;
+      width: 1150px;
       height: 50px;
       top: 230px;
       left: 50%;
       transform: translateX(-50%);
       background-image: url("../img/bg-zigzag-fill.svg");
       background-repeat: repeat-x;
-      background-position: -50px bottom;
+      background-position: 0px bottom;
       background-size: 1150px 100%;
     }
   }
